[package]
name = "client_ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
#tungstenite = "0.18.0"
async-tungstenite = { version = "0.19.0", features =["tokio-runtime"] }
futures = "0.3.25"
url = "2.3.1"
tokio =  { version = "1", features = ["full"] }